--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,17 +14,18 @@ jobs:
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
       
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
-        java-version: 11
+        distribution: 'adopt'
+        java-version: '11'
         
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '14'
+        node-version: '16'
 
     - name: Install Front-end dependencies
       run: npm install
@@ -53,4 +54,3 @@ jobs:
       with:
         name: back-coverage-report
         path: back/target/site/jacoco
-
