--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,46 +11,46 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Set up JDK 11
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'adopt'
-        java-version: '11'
-        
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Install Front-end dependencies
-      run: npm install
-      working-directory: front
-    
-    - name: Test and generate coverage report for Front-end
-      run: npm run test
-      working-directory: front
-      
-    - name: Upload Front-end coverage report
-      uses: actions/upload-artifact@v2
-      with:
-        name: front-coverage-report
-        path: front/coverage/lcov-report
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
+        with:
+          distribution: "adopt"
+          java-version: "11"
 
-    - name: Install Back-end dependencies
-      run: mvn clean install
-      working-directory: back
-    
-    - name: Test and generate coverage report for Back-end
-      run: mvn test jacoco:report
-      working-directory: back
-      
-    - name: Upload Back-end coverage report
-      uses: actions/upload-artifact@v2
-      with:
-        name: back-coverage-report
-        path: back/target/site/jacoco
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Install Front-end dependencies
+        run: npm install
+        working-directory: front
+
+      - name: Test and generate coverage report for Front-end
+        run: npm run test -- --no-watch --browsers=ChromeHeadlessNoSandbox
+        working-directory: front
+
+      - name: Upload Front-end coverage report
+        uses: actions/upload-artifact@v2
+        with:
+          name: front-coverage-report
+          path: front/coverage/lcov-report
+
+      - name: Install Back-end dependencies
+        run: mvn clean install
+        working-directory: back
+
+      - name: Test and generate coverage report for Back-end
+        run: mvn test jacoco:report
+        working-directory: back
+
+      - name: Upload Back-end coverage report
+        uses: actions/upload-artifact@v2
+        with:
+          name: back-coverage-report
+          path: back/target/site/jacoco
