--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,56 +1,42 @@
-name: CI
+name: Angular Build
 
+# {1}
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
   pull_request:
-    branches:
-      - main
+    branches: [ "main" ]
 
 jobs:
-  build:
+  angular:
+    name: Angular Build
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        node-version: [20]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      # {2}
+      - name: Checkout the source code
+        uses: actions/checkout@v3
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v4
+      # {3}
+      - name: Setup Node.js $
+        uses: actions/setup-node@v3
         with:
-          distribution: "adopt"
-          java-version: "11"
+          node-version: 20
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-
-      - name: Install Front-end dependencies
-        run: npm install
+      # {4}
+      - name: Install dependencies
+        run: npm ci
         working-directory: front
-
-      - name: Test and generate coverage report for Front-end
-        run: npm run test -- --no-watch --browsers=ChromeHeadlessNoSandbox
+      # {5}
+      - name: Run tests
+        run: npm run test
         working-directory: front
-
-      - name: Upload Front-end coverage report
-        uses: actions/upload-artifact@v2
-        with:
-          name: front-coverage-report
-          path: front/coverage/lcov-report
-
-      - name: Install Back-end dependencies
-        run: mvn clean install
-        working-directory: back
-
-      - name: Test and generate coverage report for Back-end
-        run: mvn test jacoco:report
-        working-directory: back
-
-      - name: Upload Back-end coverage report
-        uses: actions/upload-artifact@v2
-        with:
-          name: back-coverage-report
-          path: back/target/site/jacoco
+      # {6}
+      - name: Build
+        run: npm run build
+        working-directory: front
