--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,11 +16,9 @@ jobs:
         node-version: [20]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
-      # {2}
       - name: Checkout the source code
         uses: actions/checkout@v3
 
-      # {3}
       - name: Setup Node.js $
         uses: actions/setup-node@v3
         with:
@@ -28,15 +26,51 @@ jobs:
           cache: 'npm'
           cache-dependency-path: package-lock.json
 
-      # {4}
       - name: Install dependencies
         run: npm ci
         working-directory: front
-      # {5}
       - name: Run tests
         run: npm run test  -- --browsers=ChromeHeadlessNoSandbox
         working-directory: front
-      # {6}
-      - name: Build
-        run: npm run build
-        working-directory: front
+      - name: Test Report
+        uses: phoenix-actions/test-reporting@v8
+        id: test-report               # Set ID reference for step
+        if: success() || failure()    # run this step even if previous step failed
+        with:
+          name: JEST Tests            # Name of the check run which will be created
+          path: reports/jest-*.xml    # Path to test results
+          reporter: jest-junit        # Format of test results
+
+  java:
+    name: Spring Boot
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the source code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'adopt'
+          java-version: '11'
+          
+      - name: Install dependencies
+        run: mvn clean install
+        working-directory: back
+
+      - name: Run tests
+        run: mvn test
+        working-directory: back
+
+      - name: Generate Jacoco report
+        run: mvn jacoco:report
+        working-directory: back
+
+      - name: Test Report
+        uses: phoenix-actions/test-reporting@v8
+        id: test-report               # Set ID reference for step
+        if: success() || failure()    # run this step even if previous step failed
+        with:
+          name: Jacoco Coverage       # Name of the check run which will be created
+          path: back/target/site/jacoco/jacoco.xml  # Path to Jacoco coverage report
+          reporter: jacoco            # Format of test results    
