--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   angular:
-    name: Angular Build
+    name: Angular
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -38,7 +38,7 @@ jobs:
         if: success() || failure()    # run this step even if previous step failed
         with:
           name: JEST Tests            # Name of the check run which will be created
-          path: reports/jest-*.xml    # Path to test results
+          path: coverage/bobapp    # Path to test results
           reporter: jest-junit        # Format of test results
 
   java:
@@ -53,7 +53,7 @@ jobs:
         with:
           distribution: 'adopt'
           java-version: '11'
-          
+
       - name: Install dependencies
         run: mvn clean install
         working-directory: back
@@ -73,4 +73,4 @@ jobs:
         with:
           name: Jacoco Coverage       # Name of the check run which will be created
           path: back/target/site/jacoco/jacoco.xml  # Path to Jacoco coverage report
-          reporter: jacoco            # Format of test results    
+          reporter: cobertura            # Format of test results    
