--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,14 +32,11 @@ jobs:
       - name: Run tests
         run: npm run test  -- --browsers=ChromeHeadlessNoSandbox
         working-directory: front
-      - name: Test Report
-        uses: phoenix-actions/test-reporting@v8
-        id: test-report               # Set ID reference for step
-        if: success() || failure()    # run this step even if previous step failed
+      - name: Upload Test Report
+        uses: actions/upload-artifact@v2
         with:
-          name: JEST Tests            # Name of the check run which will be created
-          path: coverage/bobapp    # Path to test results
-          reporter: jest-junit        # Format of test results
+          name: Test-Report
+          path: coverage/bobapp/index.html
 
   java:
     name: Spring Boot
