--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: Test-Report
-          path: coverage/bobapp/index.html
+          path: front/coverage/bobapp/index.html
 
   java:
     name: Spring Boot
