--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,8 +39,8 @@ jobs:
         with:
           artifact: test-results            # artifact name
           name: JEST Tests                  # Name of the check run which will be created
-          path: front/coverage/bobapp/index.html                     # Path to test results (inside artifact .zip)
-          reporter: html            # Format of test results
+          path: front/coverage/bobapp/front/coverage/bobapp/cobertura-coverage.xml                    # Path to test results (inside artifact .zip)
+          reporter: jest-junit      # Format of test results
 
   java:
     name: Spring Boot
