--- a/front/sonar-project.properties
+++ b/front/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=bobappFront
 sonar.organization=himitris
 sonar.sources=src
+sonar.javascript.lcov.reportPaths=coverage/bobapp/lcov.info
