--- a/front/sonar-project.properties
+++ b/front/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=bobappFront
 sonar.organization=himitris
-sonar.sources=src
+sonar.sources=.
 sonar.javascript.lcov.reportPaths=coverage/bobapp/lcov.info
