--- a/front/sonar-project.properties
+++ b/front/sonar-project.properties
@@ -1,4 +1,9 @@
 sonar.projectKey=bobappFront
 sonar.organization=himitris
-sonar.sources=.
+sonar.sources=src
+sonar.tests=src
+sonar.language=ts
+sonar.sourceEncoding=UTF-8
+sonar.tests.inclusions=**/*.spec.ts
 sonar.javascript.lcov.reportPaths=coverage/bobapp/lcov.info
+sonar.test.inclusions=**/*.spec.ts
