--- a/back/sonar-project.properties
+++ b/back/sonar-project.properties
@@ -1,4 +1,9 @@
 sonar.projectKey=bobappBack
-sonar.organization=himitris
-sonar.sources=src/main
-sonar.tests=src/test
+sonar.projectName=BobApp Backend
+sonar.sources=src
+sonar.tests=src
+sonar.java.binaries=target/classes
+sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+sonar.language=java
+sonar.sourceEncoding=UTF-8
+sonar.test.inclusions=**/src/test/java/**/*.java
