--- a/front/sonar-project.properties
+++ b/front/sonar-project.properties
@@ -1,9 +1,8 @@
 sonar.projectKey=bobappFront
-sonar.organization=himitris
+sonar.projectName=BobApp Frontend
 sonar.sources=src
 sonar.tests=src
 sonar.language=ts
 sonar.sourceEncoding=UTF-8
-sonar.tests.inclusions=**/*.spec.ts
 sonar.javascript.lcov.reportPaths=coverage/bobapp/lcov.info
 sonar.test.inclusions=**/*.spec.ts
