--- a/back/sonar-project.properties
+++ b/back/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=bobappBack
 sonar.projectName=BobApp Backend
+sonar.organization=himitris
 sonar.sources=src
 sonar.tests=src
 sonar.java.binaries=target/classes
