--- a/front/sonar-project.properties
+++ b/front/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=bobappFront
 sonar.projectName=BobApp Frontend
+sonar.organization=himitris
 sonar.sources=src
 sonar.tests=src
 sonar.language=ts
