--- a/.github/workflows/sonarFront.yml
+++ b/.github/workflows/sonarFront.yml
@@ -13,6 +13,18 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20' 
+
+      - name: Install dependencies
+        run: npm install
+        working-directory: front
+
+      - name: Run tests and generate coverage
+        run: npm run test -- --code-coverage
+        working-directory: front    
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
