--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -1,13 +1,12 @@
 name: Docker deploy
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["SonarCloud Back / Front", "Angular / Java tests"]
+    types:
+      - completed
 jobs:
-  build:
+  deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     name: Build and Deploy Docker Images
     runs-on: ubuntu-latest
     steps:
