--- a/.github/workflows/sonarCloud.yml
+++ b/.github/workflows/sonarCloud.yml
@@ -56,6 +56,10 @@ jobs:
         run: npm install
         working-directory: front
 
+      - name: Run tests and generate coverage
+        run: npm run test
+        working-directory: front   
+         
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
