--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -7,11 +7,11 @@ on:
 
 jobs:
   test:
-    uses: <owner>/<repo>/.github/workflows/test-coverage.yml@main
+    uses: Himitris/Gerez-un-projet-collaboratif-en-int-grant-une-demarche-CI-CD/.github/workflows/test-coverage.yml@main
 
   sonarCloud:
-    uses: <owner>/<repo>/.github/workflows/sonarCloud.yml@main
-    
+    uses: Himitris/Gerez-un-projet-collaboratif-en-int-grant-une-demarche-CI-CD/.github/workflows/sonarCloud.yml@main
+
   deploy:
     name: Build and Deploy Docker Images
     runs-on: ubuntu-latest
