--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -7,10 +7,10 @@ on:
 
 jobs:
   test:
-    uses: Himitris/Gerez-un-projet-collaboratif-en-int-grant-une-demarche-CI-CD/.github/workflows/test-coverage.yml@main
+    uses: ./.github/workflows/test-coverage.yml@main
 
   sonarCloud:
-    uses: Himitris/Gerez-un-projet-collaboratif-en-int-grant-une-demarche-CI-CD/.github/workflows/sonarCloud.yml@main
+    uses: ./.github/workflows/sonarCloud.yml@main
 
   deploy:
     name: Build and Deploy Docker Images
