--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -7,10 +7,16 @@ on:
 
 jobs:
   test:
-    uses: ./.github/workflows/test-coverage.yml
+    runs-on: ubuntu-latest
+    steps:
+      - name: Wait for tests
+        uses: ./.github/workflows/test-coverage.yml
 
   sonarCloud:
-    uses: ./.github/workflows/sonarCloud.yml
+    runs-on: ubuntu-latest
+    steps:
+      - name: Wait for quality test
+        uses: ./.github/workflows/sonarCloud.yml
 
   deploy:
     name: Build and Deploy Docker Images
