--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -1,21 +1,14 @@
 name: Docker deploy
-
 on:
-  push:
-    branches:
-      - main
-
+  workflow_run:
+    workflows: ["Test code and quality"]
+    types:
+      - completed
 jobs:
-  test:
-    uses: ./.github/workflows/test-coverage.yml
-
-  sonarCloud:
-    uses: ./.github/workflows/sonarCloud.yml
-
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     name: Build and Deploy Docker Images
     runs-on: ubuntu-latest
-    needs: [test, sonarCloud]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
