--- a/.github/workflows/test-quality.yml
+++ b/.github/workflows/test-quality.yml
@@ -34,33 +34,16 @@ jobs:
       - name: Run tests
         run: npm run test  -- --browsers=ChromeHeadlessNoSandbox
         working-directory: front
-        
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'adopt'
-          java-version: '17'
-          
-      - name: Install dependencies
-        run: mvn clean install
-        working-directory: back
 
-      - name: Run tests
-        run: mvn test
-        working-directory: back
-
-      - name: Generate Jacoco report
-        run: mvn jacoco:report
-        working-directory: back
-
-      - name: Commit reports
+      - name: Commit Karma report
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add .
-          git commit -m "Add reports"
+          git pull origin main
+          git add front/coverage/bobapp
+          git commit -m "Add Karma report"
 
-      - name: Push reports
+      - name: Push Karma report
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -73,6 +56,51 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           projectBaseDir: ./front
+
+  java:
+    name: Spring Boot
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the source code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'adopt'
+          java-version: '17'
+
+      - name: Install dependencies
+        run: mvn clean install
+        working-directory: back
+
+      - name: Run tests
+        run: mvn test
+        working-directory: back
+
+      - name: Generate Jacoco report
+        run: mvn jacoco:report
+        working-directory: back
+
+      - name: Pull latest changes
+        run: |
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git pull origin main  
+
+      - name: Commit Jacoco report
+        run: |
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git pull origin main
+          git add back/target/site/jacoco
+          git commit -m "Add Jacoco report"
+
+      - name: Push Jacoco report
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v4
