--- a/.github/workflows/test-quality.yml
+++ b/.github/workflows/test-quality.yml
@@ -16,16 +16,18 @@ jobs:
     strategy:
       matrix:
         node-version: [20]
+
     steps:
       - name: Checkout the source code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js $
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
-          cache-dependency-path: package-lock.json
+        cache:
+          'npm'
+        cache-dependency-path: package-lock.json
 
       - name: Install dependencies
         run: npm ci
@@ -34,35 +36,6 @@ jobs:
       - name: Run tests
         run: npm run test  -- --browsers=ChromeHeadlessNoSandbox
         working-directory: front
-
-      - name: Commit Karma report
-        run: |
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git pull origin main
-          git add front/coverage/bobapp
-          git commit -m "Add Karma report"
-
-      - name: Push Karma report
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref }}
-
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          projectBaseDir: ./front
-
-  java:
-    name: Spring Boot
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the source code
-        uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -82,25 +55,38 @@ jobs:
         run: mvn jacoco:report
         working-directory: back
 
-      - name: Pull latest changes
+      - name: Upload Jacoco report
+        uses: actions/upload-artifact@v4
+        with:
+          name: jacoco-report
+          path: back/target/site/jacoco
+
+      - name: Upload Kamra report
+        uses: actions/upload-artifact@v4
+        with:
+          name: karma-report
+          path: front/coverage/bobapp
+
+      - name: Commit reports
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git pull origin main  
+          git add .
+          git commit -m "Add reports"
 
-      - name: Commit Jacoco report
-        run: |
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git pull origin main
-          git add back/target/site/jacoco
-          git commit -m "Add Jacoco report"
-
-      - name: Push Jacoco report
+      - name: Push reports
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ github.ref }}
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          projectBaseDir: ./front
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v4
@@ -119,11 +105,10 @@ jobs:
       - name: Build and test with Maven
         run: mvn -B clean verify
         working-directory: back
-        
+
       - name: SonarCloud Scan
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=bobappBack -Dsonar.projectName="BobApp Backend" -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml -Dsonar.tests=src/test/java -Dsonar.java.binaries=target/classes -Dsonar.language=java
         working-directory: back
