--- a/.github/workflows/test-quality.yml
+++ b/.github/workflows/test-quality.yml
@@ -16,12 +16,11 @@ jobs:
     strategy:
       matrix:
         node-version: [20]
-
     steps:
       - name: Checkout the source code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node.js $
         uses: actions/setup-node@v4
         with:
           node-version: 20
@@ -35,6 +34,38 @@ jobs:
       - name: Run tests
         run: npm run test  -- --browsers=ChromeHeadlessNoSandbox
         working-directory: front
+
+      - name: Pull latest changes
+        run: |
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git pull origin main 
+
+      - name: Commit Karma report
+        run: |
+          git add front/coverage/bobapp
+          git commit -m "Add Karma report"
+
+      - name: Push Karma report
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          projectBaseDir: ./front
+
+  java:
+    name: Spring Boot
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the source code
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -54,38 +85,22 @@ jobs:
         run: mvn jacoco:report
         working-directory: back
 
-      - name: Upload Jacoco report
-        uses: actions/upload-artifact@v4
-        with:
-          name: jacoco-report
-          path: back/target/site/jacoco
-
-      - name: Upload Kamra report
-        uses: actions/upload-artifact@v4
-        with:
-          name: karma-report
-          path: front/coverage/bobapp
-
-      - name: Commit reports
+      - name: Pull latest changes
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add .
-          git commit -m "Add reports"
+          git pull origin main  
 
-      - name: Push reports
+      - name: Commit Jacoco report
+        run: |
+          git add back/target/site/jacoco
+          git commit -m "Add Jacoco report"
+
+      - name: Push Jacoco report
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ github.ref }}
-
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          projectBaseDir: ./front
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v4
@@ -104,10 +119,11 @@ jobs:
       - name: Build and test with Maven
         run: mvn -B clean verify
         working-directory: back
-
+        
       - name: SonarCloud Scan
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=bobappBack -Dsonar.projectName="BobApp Backend" -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml -Dsonar.tests=src/test/java -Dsonar.java.binaries=target/classes -Dsonar.language=java
         working-directory: back
