--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,9 +4,11 @@ on:
     workflows: ["Test code and quality"]
     types:
       - completed
+  workflow_dispatch:
+
 jobs:
   deploy:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch'}}
     name: Build and Deploy Docker Images
     runs-on: ubuntu-latest
     steps:
